# linto-deploy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-rc.yaml  create-release.yaml  update-rc.yaml  update-versions.yaml
ansible/: .ansible-lint  .gitignore  README.md  ansible.cfg
ansible/inventory/: README.md
ansible/playbooks/: base.yml  gpu-support.yml  k3s-cluster.yml  k3s-network-fix.yml  k3s-reinstall.yml  site.yml  storage.yml  traefik.yml
charts/linto-live/: Chart.yaml  values.yaml
charts/linto-live/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml
charts/linto-llm/: Chart.yaml  values.yaml
charts/linto-llm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml
charts/linto-stt/: Chart.yaml  values.yaml
charts/linto-stt/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secrets.yaml  service.yaml
charts/linto-studio/: Chart.yaml  values.yaml
charts/linto-studio/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  (+5 more)
docs/: COMMANDS.md
docs/ansible/: README.md  inventory-example.yml
scripts/: build-rc.py  create-release.py  update-rc-service.py  update-versions.py
src/linto/: __init__.py  backup.py  cli.py  profile_ops.py
tests/: __init__.py  conftest.py  test_backend_validation.py  test_backup.py  test_cli_commands.py  test_imports.py  test_kubeconfig.py  test_profile_ops.py  test_smtp_oidc.py
versions/: README.md  latest-unstable.yaml  latest.yaml  rc.yaml
(+54 files in other folders)
